ignore build artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,27 @@
 data/
 build/
+.ycm_extra_conf.py
+index/
+Makefile.in
+Makefile
+src/Makefile
+aclocal.m4
+autom4te.cache/
+stamp-h1
+bin/
+config.h
+config.h.in
+config.log
+config.status
+config/
+example-data/
+libtool
+logFileB500R5_0.txt
+m4/
+*.swp
+*.in
+*.o
+*.out
+src/rambo
+src/.deps/
+
